@@ -1,0 +1,65 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Zirco Browser for Android
+  
+   Copyright (C) 2010 - 2011 J. Devauchelle and contributors.
+ 
+   This program is free software; you can redistribute it and/or
+   modify it under the terms of the GNU General Public License
+   version 3 as published by the Free Software Foundation.
+ 
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+ -->
+
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
+    <TextView 
+        android:id="@+id/username_view"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="18sp"
+        android:text="@string/HttpAuthenticationDialog.UserName"
+        android:gravity="left"
+        android:layout_marginTop="12dip"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip" />
+            
+    <EditText
+        android:id="@+id/username_edit"
+        android:textSize="18sp"
+        android:scrollHorizontally="true"
+        android:inputType="text"
+        android:gravity="fill_horizontal"
+        android:layout_weight="1"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:layout_marginBottom="12dip" />
+
+    <TextView
+        android:id="@+id/password_view"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="18sp"
+        android:text="@string/HttpAuthenticationDialog.Password"
+        android:gravity="left"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip" />
+            
+    <EditText
+        android:id="@+id/password_edit"
+        android:textSize="18sp"
+        android:scrollHorizontally="true"
+        android:inputType="textPassword"
+        android:gravity="fill_horizontal"
+        android:layout_weight="1"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:layout_marginBottom="12dip" />
+</TableLayout>
