@@ -1,6 +1,7 @@
 0.4.2:
 - History records which also are bookmarks are now shown in history. Clicking on the star allow to set or unset an history record as bookmark.
-- Bookmarks/history storage can be set to an internal database through preferences, for people concerned about privacy or who wants to keep different bookmarks set. Default behaviour is to use Android bookmarks database.  
+- Bookmarks/history storage can be set to an internal database through preferences, for people concerned about privacy or who wants to keep different bookmarks set. Default behaviour is to use Android bookmarks database.
+- Handle HTTP Authentication.  
 
 0.4.1:
 - Bugfixes for force close under Android >= 3.
